Fix awaiting result on mobile

--- a/interactive/src/css/_common.scss
+++ b/interactive/src/css/_common.scss
@@ -478,6 +478,8 @@ a {
         width: auto;
         right: 0px;
         color: #bdbdbd;
+        display: inline !important;
+        position: initial;
 
         &::after {
             content: 'awaiting result';
